examples/errors/unhandled_error.bio
def onSTART()
   ATTACH_TO_EVENT(onUNHANDLED_ERROR, error_handler)
   foo()
end

def foo()
   IF("zły parametr", foo(), foo())
end

def error_handler(err)
   PRINT("error_handler:", err)
end
